# vimcast

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  entitlements.plist
assets/: main.css
src/: config.rs  loader.rs  main.rs  os_specific.rs  search.rs  settings.rs  window.rs
