[package]
name = "vimcast"
version = "0.1.0"
authors = ["TeenCoder159 <teencoder159@github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
objc = "0.2"
cocoa = "0.24"
async-std = "1.13.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
dirs = "6.0.0"
core-graphics = "0.25.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
