[package]
name = "vimcast"
version = "0.1.0"
authors = ["TeenCoder159 <teencoder159@github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["desktop"] }
objc = "0.2"
async-std = "1.13.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
dirs = "6.0.0"
image = "0.25.6"
anyhow = "1.0.98"
lnk = "0.6.1"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"

[target.'cfg(target_os = "windows")'.dependencies]
lnk = "0.6.1"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
